--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test": "vitest run"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,7 +20,9 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^4.0.18"
   }
 }
