--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,22 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@cpu-vis/shared": "1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "@cpu-vis/shared": "1.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
     "nodemon": "^3.0.1",
     "supertest": "^7.0.0",
     "ts-node": "^10.9.1",
