--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "test": "npm test --workspaces",
+    "lint": "npm run lint --workspaces",
     "build": "npm run build --workspaces",
     "dev:frontend": "npm run dev -w frontend",
     "dev:backend": "npm run dev -w backend"
