--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "npm test --workspaces",
     "lint": "npm run lint --workspaces",
+    "format": "prettier --write .",
     "build": "npm run build --workspaces",
     "dev:frontend": "npm run dev -w frontend",
     "dev:backend": "npm run dev -w backend"
@@ -22,5 +23,8 @@
     "typescript"
   ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.0.0"
+  }
 }
