--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@cpu-vis/shared": "1.0.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.5.3",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
