--- a/shared/package.json
+++ b/shared/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
+    "fast-check": "^4.5.3",
     "typescript": "^5.0.0",
     "vitest": "^4.0.18"
   }
