--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@cpu-vis/shared": "1.0.0",
+    "@heroicons/react": "^2.2.0",
     "html2canvas": "^1.4.1",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
