chore: Rename project to Quantix and resolve test failures
- Renamed 'CPU Scheduling Visualizer' to 'Quantix' throughout the codebase.
- Updated frontend tests to use i18n translation keys instead of hardcoded strings.
- Added i18n mock to Vitest setup to prevent 'NO_I18NEXT_INSTANCE' warnings and test failures.
- Ensured all tests pass across monorepo workspaces.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cpu-scheduling-visualizer-monorepo",
+  "name": "quantix-monorepo",
   "version": "1.0.0",
   "private": true,
   "workspaces": [
