--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: cpu-scheduling-visualizer-api
+    name: quantix-api
     env: node
     buildCommand: cd backend && npm install && npm run build
     startCommand: cd backend && npm start
