--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write .",
     "build": "npm run build --workspaces",
     "dev:frontend": "npm run dev -w frontend",
-    "dev:backend": "npm run dev -w backend"
+    "dev:backend": "npm run dev -w backend",
+    "postinstall": "npm run build -w shared"
   },
   "keywords": [
     "cpu-scheduling",
