--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://quantix-api.onrender.com/api/$1"
+      "destination": "https://quantix-backend.onrender.com/api/$1"
     },
     {
       "source": "/(.*)",
