--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.5.3",
     "react-router-dom": "^7.13.0"
