--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^1.2.0",
+    "vite-plugin-sitemap": "^0.8.2",
     "vitest": "^4.0.18"
   }
 }
