--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,13 +38,13 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "jsdom": "^27.4.0",
+    "jsdom": "26.0.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-sitemap": "^0.8.2",
-    "vitest": "^4.0.18"
+    "vitest": "3.0.4"
   }
 }
