--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@cpu-vis/shared": "1.0.0",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "html2canvas": "^1.4.1",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "idb": "^7.1.1",
     "jspdf": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
