--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@cpu-vis/shared": "1.0.0",
@@ -27,6 +29,17 @@
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^5.0.0",
+    "@storybook/addon-a11y": "^10.2.4",
+    "@storybook/addon-docs": "^10.2.4",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^10.2.4",
+    "@storybook/addon-onboarding": "^10.2.4",
+    "@storybook/addon-vitest": "^10.2.4",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^10.2.4",
+    "@storybook/react-vite": "^10.2.4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/d3": "^7.4.0",
@@ -35,13 +48,18 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitest/browser": "3.0.4",
+    "@vitest/coverage-v8": "3.0.4",
     "autoprefixer": "^10.4.14",
     "d3": "^7.8.5",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-storybook": "^10.2.4",
     "jsdom": "26.0.0",
+    "playwright": "^1.58.1",
     "postcss": "^8.4.27",
+    "storybook": "^10.2.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
