--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,17 +29,17 @@
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^5.0.0",
-    "@storybook/addon-a11y": "^10.2.4",
-    "@storybook/addon-docs": "^10.2.4",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^10.2.4",
-    "@storybook/addon-onboarding": "^10.2.4",
-    "@storybook/addon-vitest": "^10.2.4",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/react": "^10.2.4",
-    "@storybook/react-vite": "^10.2.4",
+    "@chromatic-com/storybook": "3.2.4",
+    "@storybook/addon-a11y": "8.6.15",
+    "@storybook/addon-docs": "8.6.15",
+    "@storybook/addon-essentials": "8.6.15",
+    "@storybook/addon-interactions": "8.6.15",
+    "@storybook/addon-links": "8.6.15",
+    "@storybook/addon-onboarding": "8.6.15",
+    "@storybook/blocks": "8.6.15",
+    "@storybook/core": "8.6.15",
+    "@storybook/react": "8.6.15",
+    "@storybook/react-vite": "8.6.15",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/d3": "^7.4.0",
@@ -55,11 +55,9 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-plugin-storybook": "^10.2.4",
     "jsdom": "26.0.0",
     "playwright": "^1.58.1",
     "postcss": "^8.4.27",
-    "storybook": "^10.2.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
