--- a/package.json
+++ b/package.json
@@ -26,6 +26,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prettier": "^3.0.0"
+    "@chromatic-com/storybook": "3.2.4",
+    "@storybook/addon-a11y": "8.6.15",
+    "@storybook/addon-docs": "8.6.15",
+    "@storybook/addon-essentials": "8.6.15",
+    "@storybook/addon-interactions": "8.6.15",
+    "@storybook/addon-links": "8.6.15",
+    "@storybook/addon-onboarding": "8.6.15",
+    "@storybook/blocks": "8.6.15",
+    "@storybook/core": "8.6.15",
+    "@storybook/react": "8.6.15",
+    "@storybook/react-vite": "8.6.15",
+    "chromatic": "^15.0.0",
+    "eslint-plugin-storybook": "^0.11.2",
+    "prettier": "^3.0.0",
+    "storybook": "8.6.15"
   }
 }
