Add build-storybook proxy script to root
- Add 'build-storybook' to root package.json to delegate to frontend workspace.
- Enable automatic discovery of Storybook build by Chromatic and other tools.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "npm run build --workspaces",
     "dev:frontend": "npm run dev -w frontend",
     "dev:backend": "npm run dev -w backend",
-    "postinstall": "npm run build -w shared"
+    "postinstall": "npm run build -w shared",
+    "build-storybook": "npm run build-storybook -w frontend",
+    "chromatic": "npx chromatic --project-token=chpt_d8e726f28427857"
   },
   "keywords": [
     "cpu-scheduling",
